<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_bt_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jaisaljain345@gmail.com">jaisal</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>ament_index_cpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tb_worlds</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
